--- a/app/index.html
+++ b/app/index.html
@@ -79,11 +79,50 @@
 	  				type="button"
 	  				class="btn btn-outline-success"
 	  				></button>
-	  			<button class="btn btn-primary ml-1" type="submit">Buy</button>
+	  			<button  @click="modalVisibility = true" class="btn btn-primary ml-1" type="submit">Buy</button>
 	  		</div>
 	  	</div>
+		
+			<!-- Modal -->
+			<div 
+				v-if="modalVisibility"
+				class="modal fade show"
+				tabindex="-1"
+				role="dialog"
+				>
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <h5 class="modal-title">Do you want to buy this car?</h5>
+			        <button 
+			       		@click="modalVisibility = false"
+			        	type="button"
+			        	class="close"
+			        	data-dismiss="modal"
+			        	aria-label="Close">
+			          <span aria-hidden="true">&times;</span>
+			        </button>
+			      </div>
+			      <div class="modal-body">
+			        <p>
+			        	<ul>
+				        	<li>Make: {{ car.make }}</li>
+				  				<li>Model: {{ car.model }}</li>
+				  				<li>Year: {{ car.year }}</li>
+				  			</ul>
+				  			<strong>Price: {{ car.price }} €</strong>
+				  		</p>
+			      </div>
+			      <div class="modal-footer">
+			        <button @click="modalVisibility = false" type="button" class="btn btn-secondary" data-dismiss="modal">Buy</button>
+			        <button  @click="modalVisibility = false" type="button" class="btn btn-primary">Cancel order</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+			<div @click="modalVisibility = false" v-if="modalVisibility" class="modal-backdrop fade show"></div>
 		</div>
-
+	
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
